option to hide from taskbar and minimize to system tray
"tip of the day" feature
variable names are now case sensitive
reserved variable names are now case sensitive "pi" and "ans"
shortcut key F6 to focus and select input
added cbrt(x) function (cube root)
added trunc(x) and trunc(x,y) functions (truncation)
added floor(x) and ceil(x) functions
added round(x,y) function (decimal digit precision)
fixed issue #33: exponential notation misnamed
fixed issue #32: crash when inserting ( after variable

SpeedCrunch 0.7
---------------
fixed CMake build under Mac OS X
fixed very wide buttons when using Cleanlooks style
updated link to new homepage
fixed issue #17: crash with segmentation fault
fixed issue #22: segfault after equal,backspace,evaluate, operator
fixed issue #27: program closed unexpectedly
fixed issue #28: crash on pressing "/"

SpeedCrunch 0.7-beta2
---------------------
support for building using CMake
fixed issue #9: unary minus before a function
fixed issue #7: function argument in brackets
fixed issue #6: exponentiation of a negative number returns NaN
fixed issue #5: auto calculation shows up even on the first run
fixed issue #4: should scroll automatically to show the result
fixed issue #3: function argument starts with unary minus
patched crunch.pro to fix "make install" (thanks to Vladimir Pouzanov)
made the application look for translations in the current directory too
updated the russian, french and portuguese translations - thanks all translators

SpeedCrunch 0-7-beta1
---------------------
changed from Qt 3 to Qt 4
changed the configure script to be compatible with Qt 4
converted the layout system from container widgets to layouts
added the keypad
added an application icon for windows systems

SpeedCrunch 0.6-beta2
---------------------
fixed mouse wheel scrolls do not recally history
too large or too small number yields NaN, instead of silently becomes 0
added (partial) Czech translation by Blondak (blondak@neser.cz)